<resources>
<<<<<<< HEAD
    <string name="app_name">JansoriProject</string>
    <string name="transportation_startLocation">출발지</string>
    <string name="transportation_destLocation">도착지</string>
    <string name="transportation_stationListButton">검색</string>
    <string name="transportation_routeButton">길찾기</string>
    <string name="transportation_swapLocation">출발지↔도착지</string>
    <string name="transportation_variousInfo">현재위치 반경 500m 정류장입니다.</string>
    <string name="transportation_way">상행/하행</string>
    <string name="cancel">취소</string>
    <string name="add">추가</string>
    <string name="out">나가기</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
=======
    <string name="app_name">Jansori</string>
    <string name="weatherActivity_currentTemp">%s</string>
    <string name="weatherActivity_maxTemp">최고기온</string>
    <string name="weatherActivity_minTemp">최저기온</string>
    <string name="weatherActivity_rainChance">20%</string>
    <string name="weatherActivity_locationName">수정구</string>
    <string name="weatherActivity_weatherName">흐림</string>
    <string name="weatherActivity_eachTime">시간별</string>
    <string name="weatherActivity_eachDay">일별</string>
    <string name="timeWeather_weatherName">흐림</string>
    <string name="timeWeather_rainChance"> 20%</string>
    <string name="timeWeather_temperature"> 25º</string>
    <string name="timeWeather_Time">오후 2시</string>

    <string name="alarmMainText">Press button to add alarm</string>
    <string name="alarmSetRepeatTitle">Repeat</string>
    <string name="Time">Time</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="label">Label</string>
    <string name="add_label_hint">AlarmLabel</string>
    <string name="AlarmTime">17:17</string>

    <string name="mon">Mon</string>
    <string name="tue">Tue</string>
    <string name="wed">Wed</string>
    <string name="thu">Thu</string>
    <string name="fri">Fri</string>
    <string name="sat">Sat</string>
    <string name="sun">Sun</string>
>>>>>>> 178fed7cdde1ea925ff4efa47fff062ca9037a87
</resources>
