<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Alarm.AlarmSetActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Time"
            android:textAppearance="?android:attr/textAppearanceLarge"

            android:textColor="@color/black"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/divider"/>

        <TimePicker
            android:id="@+id/timePickerAddAlarm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:timePickerMode="spinner"
            android:layout_marginBottom="15dp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_marginBottom="@dimen/list_padding_vertical_small"
            android:text="@string/label"
            tools:text="Label"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="@dimen/list_padding_vertical_small"
            android:background="@drawable/divider" />

        <EditText
            android:id="@+id/edit_alarm_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapWords"
            android:maxLength="15"
            android:textColor="@color/secondary_text"
            android:textStyle="italic"
            android:hint="@string/add_label_hint"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:autofillHints="" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/alarmSetRepeatTitle"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/black"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/divider"/>

       <GridLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:columnCount="2"
           android:orientation="horizontal">
           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_gravity="center_vertical"
               android:layout_marginBottom="@dimen/list_padding_vertical_small"
               android:text="@string/monday"
               tools:text="Monday"
               />

           <CheckBox
               android:id="@+id/edit_alarm_mon"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_marginBottom="@dimen/list_padding_vertical_small"
               android:layout_gravity="end|center_vertical"/>

           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_gravity="center_vertical"
               android:layout_marginBottom="@dimen/list_padding_vertical_small"
               android:text="@string/tuesday"
               tools:text="Tuesday"
               />

           <CheckBox
               android:id="@+id/edit_alarm_tues"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_marginBottom="@dimen/list_padding_vertical_small"
               android:layout_gravity="end"/>

           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_gravity="center_vertical"
               android:layout_marginBottom="@dimen/list_padding_vertical_small"
               android:text="@string/wednesday"
               tools:text="Wednesday"
               />

           <CheckBox
               android:id="@+id/edit_alarm_wed"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_marginBottom="@dimen/list_padding_vertical_small"
               android:layout_gravity="end"/>

           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_gravity="center_vertical"
               android:layout_marginBottom="@dimen/list_padding_vertical_small"
               android:text="@string/thursday"
               tools:text="Thursday"
               />

           <CheckBox
               android:id="@+id/edit_alarm_thurs"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_marginBottom="@dimen/list_padding_vertical_small"
               android:layout_gravity="end"/>

           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_gravity="center_vertical"
               android:layout_marginBottom="@dimen/list_padding_vertical_small"
               android:text="@string/friday"
               tools:text="Friday"
               />

           <CheckBox
               android:id="@+id/edit_alarm_fri"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_marginBottom="@dimen/list_padding_vertical_small"
               android:layout_gravity="end"/>

           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_gravity="center_vertical"
               android:layout_marginBottom="@dimen/list_padding_vertical_small"
               android:text="@string/saturday"
               tools:text="Saturday"
               />

           <CheckBox
               android:id="@+id/edit_alarm_sat"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_marginBottom="@dimen/list_padding_vertical_small"
               android:layout_gravity="end"/>

           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_gravity="center_vertical"
               android:layout_marginBottom="@dimen/list_padding_vertical_small"
               android:text="@string/sunday"
               tools:text="Sunday"
               />

           <CheckBox
               android:id="@+id/edit_alarm_sun"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_marginBottom="@dimen/list_padding_vertical_small"
               android:layout_gravity="end"/>
       </GridLayout>

    </LinearLayout>


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabSaveAlarm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center_horizontal"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        app:fabSize="auto"/>

</androidx.coordinatorlayout.widget.CoordinatorLayout>