<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".PublicTransportationActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/transportation_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@android:color/white"
        app:title="대중교통" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/station1_txtview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/transportation_startLocation"
            android:padding="5dp"/>

        <Button
            android:id="@+id/station1_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/station1_txtview"
            android:layout_alignParentRight="true"
            android:layout_marginLeft="5dp"
            android:background="@android:color/holo_blue_bright"
            android:text="@string/transportation_stationListButton"
            android:textColor="@android:color/white"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/station1_editxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:layout_below="@id/station1_txtview"
            android:layout_toLeftOf="@id/station1_btn"
            android:layout_alignBottom="@id/station1_btn"/>

        <TextView
            android:id="@+id/station2_txtview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/transportation_destLocation"
            android:padding="5dp"
            android:layout_below="@id/station1_editxt"/>

        <Button
            android:id="@+id/station2_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/station2_txtview"
            android:layout_alignParentRight="true"
            android:layout_marginLeft="5dp"
            android:background="@android:color/holo_blue_bright"
            android:text="@string/transportation_stationListButton"
            android:textColor="@android:color/white"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/station2_editxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:layout_below="@id/station2_txtview"
            android:layout_toLeftOf="@id/station2_btn"
            android:layout_alignBottom="@id/station2_btn"/>

        <Button
            android:id="@+id/search_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/station2_editxt"
            android:layout_alignParentRight="true"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:background="@android:color/holo_blue_bright"
            android:text="@string/transportation_routeButton"
            android:textColor="@android:color/white"
            android:textStyle="bold" />

        <Button
            android:id="@+id/swap_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/transportation_swapLocation"
            android:layout_toLeftOf="@id/search_btn"
            android:layout_alignTop="@id/search_btn"/>

        <TextView
            android:id="@+id/various_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/transportation_variousInfo"
            android:padding="5dp"
            android:layout_toLeftOf="@id/swap_btn"
            android:layout_alignBottom="@id/swap_btn"/>
    </RelativeLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/fragment"
        android:orientation="vertical">
    </FrameLayout>

<!--    <Spinner-->
<!--        android:id="@+id/sp_api"-->
<!--        android:layout_width="match_parent"-->
<!--        android:entries="@array/api"-->
<!--        android:layout_height="wrap_content"/>-->

<!--    <RadioGroup-->
<!--        android:id="@+id/rg_object_type"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:orientation="horizontal">-->

<!--        <RadioButton-->
<!--            android:id="@+id/rb_json"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:checked="true"-->
<!--            android:text="Json"/>-->

<!--        <RadioButton-->
<!--            android:id="@+id/rb_map"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:text="map"/>-->
<!--    </RadioGroup>-->

<!--    <Button-->
<!--        android:id="@+id/bt_api_call"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:text="API 호출"/>-->

<!--    <ScrollView-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content">-->

<!--        <LinearLayout-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content">-->

<!--            <TextView-->
<!--                android:id="@+id/tv_data"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"/>-->
<!--        </LinearLayout>-->
<!--    </ScrollView>-->
</LinearLayout>